--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-try
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rizal Eats</title>
+    <link rel="stylesheet" href="styles.css">
+    
+</head>
+<body>
+
+<div class="ring">
+    <i style="--clr:#e32929;"></i>
+    <i style="--clr:#ff611d;"></i>
+    <i style="--clr:#ffb80e;"></i>
+    <div class="login">
+      <h2>Welcome to Rizal Eats!</h2>
+      <h1>Login</h1>
+      <div class="inputBx">
+        <input type="text" placeholder="Username">
+      </div>
+      <div class="inputBx">
+        <input type="password" placeholder="Password">
+      </div>
+      <div class="inputBx">
+        <input type="submit" value="Sign In">
+      </div>
+      <div class="links">
+        <a href="#">Forget Password</a>
+        <a href="#">Sign Up</a>
+      </div>
+    </div>
+  </div>
+
+  
+
+</body>
+</html>
