--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">RIZAL EATS</h1>
+            <img src="RIZAL EATS LOGO.png" alt="Rizal Eats" class="header-logo">
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="municipalities.html">Municipalities</a></li>
+                    <li><a href="municipalities.html">Municipalities/City</a></li>
                     <li><a href="#about">About</a></li>
                 </ul>
             </nav>
@@ -25,7 +25,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h2>Discover Rizal's Best Eats</h2>
-                <p>Explore top-rated restaurants across Rizal's municipalities</p>
+                <p>Explore Rizal on a plate with top-rated restaurants across the province's municipalities and city!</p>
                 <a href="municipalities.html" class="btn">Browse Now</a>
             </div>
         </section>
