--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>RIZAL EATS - Home</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
 </head>
 <body>
     <header>
@@ -13,9 +14,10 @@
             <h1 class="logo">RIZAL EATS</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="municipalities.html">Municipalities</a></li>
                     <li><a href="#about">About</a></li>
+                    <li class="login-item"><a href="login.html" class="login-btn active"><i class="fas fa-user"></i> Log In</a></li>
                 </ul>
             </nav>
         </div>
