--- a/municipalities.html
+++ b/municipalities.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">RIZAL EATS</h1>
+            <img src="RIZAL EATS LOGO.png" alt="Rizal Eats" class="header-logo">
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="municipalities.html" class="active">Municipalities</a></li>
                     <li><a href="#about">About</a></li>
-                    <li class="login-item"><a href="login.html" class="login-btn"><i class="fas fa-user"></i> Log In</a></li>
+                    <li class="login-item"><a href="login.html" class="login-btn"><i class="fas fa-user">Sign In</i></a></li>
                 </ul>
             </nav>
         </div>
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="search-box">
                 <i class="fas fa-search"></i>
-                <input type="text" placeholder="Search municipalities...">
+                <input type="text" placeholder="Search...">
             </div>
         </div>
     </div>
@@ -88,7 +88,7 @@
 
                 <!-- Cardona -->
                 <div class="municipality-card">
-                    <img src="images/cardona.jpg" alt="Cardona">
+                    <img src="images/cardona.jpeg" alt="Cardona">
                     <div class="card-content">
                         <h3>Cardona</h3>
                         <p>Lakeside Town</p>
@@ -100,7 +100,7 @@
 
                 <!-- Jala-Jala -->
                 <div class="municipality-card">
-                    <img src="images/jala-jala.jpg" alt="Jala-Jala">
+                    <img src="images/jala-jala.jpeg" alt="Jala-Jala">
                     <div class="card-content">
                         <h3>Jala-Jala</h3>
                         <p>Fishing Village</p>
@@ -124,7 +124,7 @@
 
                 <!-- Tanay -->
                 <div class="municipality-card">
-                    <img src="images/tanay.jpg" alt="Tanay">
+                    <img src="images/tanay.jpeg" alt="Tanay">
                     <div class="card-content">
                         <h3>Tanay</h3>
                         <p>Adventure Capital</p>
@@ -136,7 +136,7 @@
 
                 <!-- Taytay -->
                 <div class="municipality-card">
-                    <img src="images/taytay.jpg" alt="Taytay">
+                    <img src="images/taytay.jpeg" alt="Taytay">
                     <div class="card-content">
                         <h3>Taytay</h3>
                         <p>Garments Capital</p>
@@ -172,7 +172,7 @@
 
                 <!-- San Mateo -->
                 <div class="municipality-card">
-                    <img src="images/san-mateo.jpg" alt="San Mateo">
+                    <img src="images/san mateo.jpg" alt="San Mateo">
                     <div class="card-content">
                         <h3>San Mateo</h3>
                         <p>Emerging Commercial Hub</p>
