--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="municipalities.html">Municipalities/City</a></li>
+                    <li><a href="municipalities.html">Municipalities</a></li>
                     <li><a href="#about">About</a></li>
                 </ul>
             </nav>
@@ -29,7 +29,7 @@
                 <a href="municipalities.html" class="btn">Browse Now</a>
             </div>
         </section>
-
+          
         <section class="featured-cities">
             <h3>Featured Municipalities</h3>
             <div class="container">
