--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h2>Discover Rizal's Best Eats</h2>
-                <p>Explore Rizal on a plate with top-rated restaurants across the province's municipalities and city!</p>
+                <p>Explore Rizal on a plate with top-rated restaurants across the province's municipalities!</p>
                 <a href="municipalities.html" class="btn">Browse Now</a>
             </div>
         </section>
