--- a/municipalities.html
+++ b/municipalities.html
@@ -158,7 +158,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="municipalities.html" class="active">Municipalities</a></li>
                     <li><a href="#about">About</a></li>
-                    <li class="login-item"><a href="login.html" class="login-btn"><i class="fas fa-user">Sign In</i></a></li>
+                    <li class="login-item"><a href="login.html" class="login-btn"><i class="fas fa-user">Log In</i></a></li>
                 </ul>
             </nav>
         </div>
