--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="municipalities.html">Municipalities</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li class="login-item"><a href="login.html" class="login-btn active"><i class="fas fa-user"></i>Log In</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li class="login-item"><a href="login.html" class="login-btn"><i class="fas fa-user"></i>Log In</a></li>
                 </ul>
             </nav>
         </div>
@@ -33,7 +33,7 @@
         </section>
           
         <section class="featured-cities">
-            <h3>Featured Municipalities</h3>
+            <h2 class="home-title">Featured Municipalities</h2>
             <div class="container">
                 <div class="city-grid">
                     <!-- Static City Cards -->
