--- a/login.html
+++ b/login.html
@@ -97,14 +97,14 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="municipalities.html">Municipalities</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main>
-
+        <h1 class="h1">Welcome back!</h1>
         <div class="login-container">
             <h2 class="login-title">Login to Your Account</h2>
             <form id="loginForm">
