--- a/municipalities/angono.html
+++ b/municipalities/angono.html
@@ -609,16 +609,11 @@
         <div class="container">
             <img src="RIZAL EATS LOGO.png" alt="Rizal Eats" class="header-logo">
             <nav>
-                <ul class="nav-links">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../municipalities.html">Municipalities</a></li>
-                    <li><a href="../about.html">About</a></li>
-                    <li class="login-item">
-                        <a href="#" id="auth-btn" class="login-btn">
-                            <i class="fas fa-user"></i> 
-                            <span id="auth-text">Login</span>
-                        </a>
-                    </li>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="municipalities.html">Municipalities</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li class="login-item"><a href="login.html" class="login-btn"><i class="fas fa-user"></i>Log In</a></li>
                 </ul>
             </nav>
         </div>
@@ -627,8 +622,8 @@
     <main>
         <div class="restaurants-container">
             <div class="breadcrumb">
-                <a href="../index.html">Home</a> &gt; 
-                <a href="../municipalities.html">Municipalities</a> &gt; 
+                <a href="index.html">Home</a> &gt; 
+                <a href="municipalities.html">Municipalities</a> &gt; 
                 <span>Angono</span>
             </div>
             
