--- a/municipalities/morong.html
+++ b/municipalities/morong.html
@@ -612,7 +612,7 @@
                 <ul class="nav-links">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../municipalities.html">Municipalities</a></li>
-                    <li><a href="../about.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li class="login-item">
                         <a href="#" id="auth-btn" class="login-btn">
                             <i class="fas fa-user"></i> 
