--- a/register.html
+++ b/register.html
@@ -98,7 +98,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="municipalities.html">Municipalities</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
         </div>
