--- a/login.html
+++ b/login.html
@@ -99,7 +99,7 @@
         }
         
         body {
-            background-image: url('images/download.jpg');
+            background-image: url('images/download.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -115,7 +115,6 @@
         .nav-links li a {
             position: relative;
             text-decoration: none;
-            color: #2c3e50;
             transition: color 0.3s ease;
         }
 
@@ -126,7 +125,7 @@
             height: 2px;
             bottom: -2px;
             left: 0;
-            background-color: #e32929;
+            background-color: #ffb80e;
             transition: width 0.3s ease;
         }
 
@@ -135,14 +134,14 @@
         }
 
         .nav-links li a:hover {
-            color: #e32929;
+            color: #ffb80e;
         }
 
         /* Styling for Welcome back! text */
         .h1 {
             text-align: center;
             margin: 0.5rem 0; /* Trimmed spacing */
-            background: linear-gradient(45deg, #813531, #ff611d); /* Gradient text */
+            background: linear-gradient(45deg, #ffb80e	, #ff611d	); /* Gradient text */
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
@@ -223,7 +222,7 @@
             <h2 class="login-title">Login to Your Account</h2>
             <form id="loginForm">
                 <div class="form-group">
-                    <input type="email" id="email" required placeholder="Email">
+                    <input type="email" id="email" required placeholder="Username">
                 </div>
                 
                 <div class="form-group">
