--- a/index.html
+++ b/index.html
@@ -209,18 +209,18 @@
 
         .city-info h4 {
             margin: 0 0 0.75rem;
-            font-size: 1.25rem;
-            color: #2B2D42;
+            font-size: 2rem;
+            color: #ff611d;
         }
 
         .city-info p {
             margin: 0;
-            color: #6c757d;
+            color: #4d5359;
             font-size: 0.9rem;
         }
 
         .municipality-details {
-            padding: 1.5rem;
+            padding: 1.8rem;
             border-top: 1px solid #e0e0e0;
             text-align: center;
             opacity: 0;
@@ -236,7 +236,7 @@
 
         .municipality-details p {
             font-size: 0.95rem;
-            color: #6c757d;
+            color: #4d5359;
             margin: 0 0 0.75rem;
         }
 
@@ -248,7 +248,7 @@
 
         .municipality-details ul li {
             font-size: 0.9rem;
-            color: #2B2D42;
+            color: #ff611d	;
             margin-bottom: 0.5rem;
         }
 
