--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         }
 
         .hero-content h2 {
-            font-size: 2.5rem;
+            font-size: 4.5rem;
             margin: 0 0 1rem;
             text-shadow: 0 3px 6px rgba(0, 0, 0, 0.7); /* Strong shadow for readability */
             color: #ffffff; /* Always white */
@@ -79,17 +79,18 @@
         .hero-content .btn {
             display: inline-block;
             padding: 0.75rem 1.5rem;
-            background-color: #e32929;
+            background-color: rgba(0, 0, 0, 0.5);
             color: #ffffff; /* Always white */
             text-decoration: none;
-            border-radius: 5px;
+            border-radius: 25px;
+            border: 2px solid whitesmoke;
             font-size: 1rem;
             transition: background-color 0.3s ease, transform 0.2s ease;
             text-shadow: 0 2px 3px rgba(0, 0, 0, 0.7); /* Shadow for button text */
         }
 
         .hero-content .btn:hover {
-            background-color: #982121;
+            background-color: rgba(0, 0, 0, 0.9);;
             transform: scale(1.05);
         }
 
