--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
 
         .hero-content h2 {
-            font-size: 4.5rem;
+            font-size: 2.5rem;
             margin: 0 0 1rem;
             text-shadow: 0 3px 6px rgba(0, 0, 0, 0.7); /* Strong shadow for readability */
             color: #ffffff; /* Always white */
@@ -80,8 +80,7 @@
         .hero-content .btn {
             display: inline-block;
             padding: 0.75rem 1.5rem;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: #ffffff; /* Always white */
+            background-color: #e32929	;
             text-decoration: none;
             border-radius: 25px;
             border: 2px solid whitesmoke;
