--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             margin: 0 0 1rem;
             text-shadow: 0 3px 6px rgba(0, 0, 0, 0.7); /* Strong shadow for readability */
             color: #ffffff; /* Always white */
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
 
         .hero-content p {
@@ -75,6 +76,8 @@
             margin: 0 0 1.5rem;
             text-shadow:0 2px 4px rgba(0, 0, 0, 0.7); /* Strong shadow */
             color: #ffffff; /* Always white */
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
         }
 
         .hero-content .btn {
