--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     <li><a href="municipalities.html">Municipalities</a></li>
                     <li><a href="about.html">About</a></li>
                     <li class="login-item">
-                        <a href="login.html" class="login-btn" id="auth-btn"><i class="fas fa-user"></i> Log In</a>
+                        <a href="login.html" class="login-btn" id="auth-btn"><i class="fas fa-user" color="whitesmoke"></i> Log In</a>
                     </li>
                 </ul>
             </nav>
