--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         /* Hero section styling for YouTube video background */
+        .header-logo {
+            animation: bounceIn 1s ease-out;
+        }
+        
         .hero {
             position: relative;
             width: 100%;
